# Path-Generator

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  params.json  pyproject.toml  requirements.txt
.github/workflows/: docs.yml  pypi-deploy.yml  tests.yml
api/generator/: index.html
api/geometry/: index.html
app/: main.py
app/pathgenerator/: __init__.py  generator.py  geometry.py
app/static/: playground.js  style.css
app/templates/: playground.html
docs/: index.md  path_generation.md
docs/api/: generator.md  geometry.md
docs/examples/: basic_usage.md  tuning.md
docs/images/: .gitkeep
docs/stylesheets/: pipeline.css
examples/basic_usage/: index.html
examples/tuning/: index.html
javascripts/: pipeline.js
path_generation/: index.html
search/: search_index.json
src/pathgenerator/: __init__.py  generator.py  pathemulator.py  server.py
src/pathgenerator/static/: playground.js
src/pathgenerator/templates/: playground.html
tests/: test_generator.py  test_geometry.py
